--- a/app/src/main/res/layout/game_activity.xml
+++ b/app/src/main/res/layout/game_activity.xml
@@ -17,7 +17,7 @@
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/center"
+        app:layout_constraintEnd_toStartOf="@+id/hints"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
@@ -31,15 +31,34 @@
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/center" />
+        app:layout_constraintStart_toEndOf="@+id/hints" />
 
-    <TextView
-        android:id="@+id/center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:id="@+id/hints"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginBottom="24dp"
+        android:adjustViewBounds="true"
+        android:background="#F4BD33"
+        android:scaleType="fitCenter"
+        android:src="@drawable/hintbulbshadow"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/onoff"
+        android:layout_width="20dp"
+        android:layout_height="21dp"
+        android:gravity="center|center_vertical"
+        android:text="off"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="@+id/hints"
+        app:layout_constraintEnd_toEndOf="@+id/hints"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="@+id/hints"
+        app:layout_constraintTop_toTopOf="@+id/hints"
+        app:layout_constraintVertical_bias="0.422" />
 
     <TextView
         android:id="@+id/display"
