--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="green">#008000</color>
     <color name="darkgreen">#006400</color>
     <color name="black_overlay">#66000000</color>
+    <color name="yellow">#FBC02D</color>
 </resources>
