--- a/app/src/main/res/anim/rotate.xml
+++ b/app/src/main/res/anim/rotate.xml
@@ -3,6 +3,8 @@
         android:toDegrees="180"
         android:pivotX="50%"
         android:pivotY="50%"
+        android:fromXScale="0.0"
+        android:fromYScale="0.0"
         android:duration="600"
         android:repeatMode="restart"
         android:repeatCount="0"
